--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.12",
+    "lucide-react": "^0.483.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
