--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.12",
+    "axios": "^1.7.9",
     "lucide-react": "^0.483.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
